@@ -1,0 +1,6 @@
+# a list of forbidden multiline constructs in debian/rules
+# format is 
+#   tag ~~ regex (/xm)
+# Please sort by alphabetic sort of tags
+#
+debian-rules-should-not-set-CFLAGS-from-noopt ~~ ^ifn?eq\s+\(,\$\(findstring\s+noopt,\$\(DEB_BUILD_OPTIONS\)\)\)\n+\t+CFLAGS\s+\+=\s+-O[02]\n+else\n+\t+CFLAGS\s+\+=\s+-O[02]\n+endif$
